# sudoku

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  boardparser.c  boardparser.h  boardproperties.h  drawboard.c  drawboard.h  formatsudoku.c  inputhandler.c  inputhandler.h  madness.c  mempool.c  mempool.h  playsudoku.c  profile-sudoku.sh  puzzlesolver.c  puzzlesolver.h  solvesudoku.c  sudoku.c  sudoku.h  timesolvesudoku.c
benches/: sudoku_solver.rs
c-impl/: .gitignore  ALGORITHM.md  Makefile  README.md  boardparser.c  boardparser.h  inputhandler.c  madness.c  profile-longest10.sh
c-impl/data/: before_memory_pool_21886.csv  before_memory_pool_longest10.csv  before_memory_pool_longest10_callgrind.out.24430  stack_alloc_longest10_callgrind.out.16026
data/: 2018-09-24-combined21886.csv  before_memory_pool_21886.csv  before_memory_pool_21886_callgrind.out.18442  before_memory_pool_longest10_callgrind.out.21571  stack_alloc_21886.csv  stack_alloc_21886_callgrind.out.17038  stack_alloc_longest10.csv
samples/: combined_2076.txt  combined_21886.txt  combined_21886solutions.txt  combined_4441.txt  easy.txt  easysolutions.txt  hard95.txt  hard95solutions.txt  longest10.txt  msk_009.txt  subig20.txt  sudoku-Euler-96.txt  top100.txt  top2365.txt  top95.txt
src/: lib.rs  main.rs  sudoku.rs
tests/: correct_solutions.rs  timer.rs
