[package]
name = "sudoku"
version = "0.1.0"
authors = ["Sunjay Varma <varma.sunjay@gmail.com>"]

[profile.dev]
opt-level = 3

[profile.test]
opt-level = 3

[dependencies]

[dev-dependencies]
criterion = "0.2"

[lib]
bench = false

[[bin]]
name = "solve"
bench = false
required-features = ["std"]

[[bench]]
name = "sudoku_solver"
harness = false

[features]
default = ["std"]
# Disable this feature to use this crate in no_std environments
std = []
